Adjusted post size to avoid overflow.

--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ aside {
     .blog article:nth-of-type(-n+2) {
       margin-left: 20px;
       margin-right: 20px;
-      width: 43.5%; }
+      width: 43%; }
     .blog article:nth-of-type(3) {
       margin-left: 20px;
       margin-right: 20px;
