--- a/styles.css.scss
+++ b/styles.css.scss
@@ -89,7 +89,7 @@ aside {
 		article:nth-of-type(-n+2) {
 			margin-left: 20px;
 			margin-right: 20px;
-			width: 43.5%;
+			width: 43%;
 		}
 
 		article:nth-of-type(3) {
